Fix #86 - resolve layout breaking on zoom-out on accounts grid

--- a/app/assets/stylesheets/accounts.scss
+++ b/app/assets/stylesheets/accounts.scss
@@ -283,8 +283,6 @@
     }
 
     .name {
-      width: 333-20-60-15px;
-      float: left;
       padding-top: 10px;
 
       a {
